# claude-commander

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  flake.nix  release.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml  publish-aur.yml  publish-tap.yml
client/: .envrc  .gitignore  README.md  pubspec.yaml
client/android/: build.gradle.kts
client/integration_test/: app_flows_test.dart  simple_test.dart  terminal_throughput_test.dart
client/lib/: main.dart  server_config.dart
client/linux/: CMakeLists.txt
client/rust/: Cargo.toml
client/rust/src/: frb_generated.rs
client/rust/src/api/: mirrors.rs  mod.rs  registry.rs  review.rs  simple.rs  terminal.rs
client/rust/tests/: server_flows.rs
client/rust_builder/: pubspec.yaml
client/test/: adaptive_shell_test.dart  connection_page_test.dart  create_session_page_test.dart  programs_page_test.dart  projects_page_test.dart  review_page_test.dart  server_config_test.dart  session_detail_page_test.dart  session_list_page_test.dart  terminal_page_test.dart  widget_test.dart
client/tool/: e2e.sh
crates/claude-commander/: Cargo.toml
crates/claude-commander-client/: Cargo.toml
crates/claude-commander-client/src/: attach.rs  backoff.rs  client.rs  error.rs  lib.rs  poller.rs
crates/claude-commander-core/: Cargo.toml
crates/claude-commander-core/src/: agent.rs  api.rs  cli.rs  cli_args.rs  commander.rs  commander_slack_appendix.md  error.rs  fuzzy.rs  lib.rs  paste_image.rs  picker.rs  reviewed.rs  server_info.rs  slack_notify.rs  stream_json.rs
crates/claude-commander-core/src/backend/: error.rs  local.rs  mock.rs  mod.rs  placeholder.rs  run_local.rs
crates/claude-commander-core/src/commander/: headless.rs
crates/claude-commander-core/src/comment/: apply.rs  mod.rs
crates/claude-commander-core/src/config/: config.rs  config_store.rs  keybindings.rs  migrations.rs  mod.rs  storage.rs  store.rs  theme.rs  view_mode.rs
crates/claude-commander-core/src/conversation/: audio.rs  ipc.rs  listener.rs  mod.rs  recorder.rs  session.rs  speaker.rs  tts.rs
crates/claude-commander-core/src/git/: auto_pull.rs  backend.rs  lfs.rs  mod.rs  pr.rs  review_diff.rs  worktree.rs  worktree_include.rs
crates/claude-commander-core/src/session/: branch_reconcile.rs  mod.rs  section.rs  types.rs
crates/claude-commander-core/src/session/manager/: cascade.rs  content.rs  hibernate.rs  lifecycle.rs  mod.rs  nix.rs  project_shell.rs  projects.rs  tests.rs  worktree_sync.rs
crates/claude-commander-core/src/telemetry/: event.rs  mod.rs  sink.rs
crates/claude-commander-core/src/tmux/: attach.rs  capture.rs  executor.rs  headless_attach.rs  isolation.rs  mod.rs  state.rs
crates/claude-commander-core/src/tui/: event.rs  hotkey.rs  list_nav.rs  mod.rs  prefs.rs  render_tests.rs  theme.rs
crates/claude-commander-core/src/tui/app/: actions.rs  background.rs  conversation.rs  event_loop.rs  input.rs  mod.rs  modals.rs  render.rs  review.rs  selection.rs  settings.rs  state.rs  tests.rs
crates/claude-commander-core/src/tui/snapshots/: claude_commander_core__tui__render_tests__info_view_long_text_wraps.snap  claude_commander_core__tui__render_tests__modal_confirm.snap  claude_commander_core__tui__render_tests__modal_confirm_restart.snap  claude_commander_core__tui__render_tests__modal_error.snap  claude_commander_core__tui__render_tests__modal_help.snap  claude_commander_core__tui__render_tests__preview_empty.snap  claude_commander_core__tui__render_tests__preview_to_info_view_switch_no_clear.snap  claude_commander_core__tui__render_tests__preview_to_shell_view_switch_no_clear.snap  claude_commander_core__tui__render_tests__quick_switch_with_matches.snap  claude_commander_core__tui__render_tests__session_list_mixed_programs.snap  claude_commander_core__tui__render_tests__session_list_single_project.snap  claude_commander_core__tui__render_tests__status_bar_default.snap
crates/claude-commander-core/src/tui/widgets/: info_view.rs  mod.rs  preview.rs
crates/claude-commander-core/src/tui/widgets/tree_list/: mod.rs  pr_colors.rs  render.rs  state.rs  tests.rs
crates/claude-commander-core/tests/: integration_test.rs
crates/claude-commander-protocol/: Cargo.toml
crates/claude-commander-protocol/src/: api.rs  comment.rs  connection.rs  diff.rs  lib.rs  pr.rs  session.rs  ws.rs
crates/claude-commander-remote/: Cargo.toml
crates/claude-commander-remote/src/: attach.rs  backend.rs  error.rs  lib.rs  poller.rs  spec.rs
crates/claude-commander-server/: CHANGELOG.md  Cargo.toml
crates/claude-commander-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/claude-commander-server/src/handlers/: blobs.rs  cascade.rs  commander.rs  config.rs  health.rs  mod.rs  paste.rs  projects.rs  review.rs  sessions.rs  slack.rs  test_support.rs  workspace.rs
crates/claude-commander-server/src/slack/: client.rs  decision.rs  handler.rs  listener.rs  mod.rs
crates/claude-commander-server/src/ws/: attach.rs  mod.rs  protocol.rs
crates/claude-commander-server/tests/: integration_test.rs
crates/claude-commander-test-support/: Cargo.toml
crates/claude-commander-test-support/src/: lib.rs
crates/claude-commander-web/: Cargo.toml  README.md
crates/claude-commander-web/src/: assets.rs  auth.rs  config.rs  lib.rs  main.rs  proxy.rs  router.rs  ws_proxy.rs
crates/claude-commander/src/: main.rs
docker/mutants/: Dockerfile  README.md
docs/: configuration.md  slack.md  usage.md
packaging/aur/: PKGBUILD
scripts/: mutants.sh
src/: agent.rs  api.rs  cli.rs  cli_args.rs  commander.rs  commander_prime.md  error.rs  lib.rs  main.rs  picker.rs  reviewed.rs  share.rs  test_support.rs
src/annotation/: apply.rs  mod.rs  selection.rs
src/comment/: mod.rs  pr_review.rs
src/config/: config_store.rs  keybindings.rs  mod.rs  settings.rs  storage.rs  store.rs  theme.rs  view_mode.rs
src/conversation/: audio.rs  extract.rs  global_shortcut.rs  ipc.rs  listener.rs  media.rs  mod.rs  (+5 more)
tests/: integration_test.rs
(+150 files in other folders)
