[workspace]
resolver = "2"
members = ["crates/*"]
# Plain `cargo build`/`cargo test` build only the core lib + TUI/CLI binary, so
# TUI-only users never compile the server crate's web stack (axum/tower/hyper).
default-members = ["crates/claude-commander-core", "crates/claude-commander"]

[workspace.package]
version = "0.22.1"
edition = "2024"
authors = ["Claude Commander Contributors"]
license = "MIT"
repository = "https://github.com/claude-commander/claude-commander"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
