[package]
name = "claude-commander"
version = "0.23.0"
edition = "2024"
authors = ["Claude Commander Contributors"]
description = "A high-performance terminal UI for managing Claude coding sessions"
license = "MIT"
repository = "https://github.com/claude-commander/claude-commander"
keywords = ["claude", "ai", "terminal", "tui", "tmux"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# CLI (derive macros - idiomatic Rust)
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ansi-to-tui = "8"
# Text-input buffer (cursor/editing) for the review comment box.
tui-input = "0.15"

# Git (pure Rust)
gix = { version = "0.68", default-features = false, features = [
    "worktree-mutation",
    "revision",
    "status",
    "dirwalk",
    "index",
] }

# Configuration (layered: env -> file -> CLI)
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
color-eyre = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting for the review diff view (fancy-regex backend — pure
# Rust, no C/oniguruma dependency). `two-face` supplies an extended syntax set
# (the bat language set, incl. TypeScript/TSX/TOML/…) that syntect's bundled
# defaults lack.
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
] }
two-face = { version = "0.4", default-features = false, features = [
    "syntect-fancy",
] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
directories = "5.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1.10"

# Async utilities
async-trait = "0.1"

# PTY for terminal attachment
pty-process = { version = "0.5", features = ["async"] }

# Unix system calls (safe wrappers)
nix = { version = "0.29", features = ["term", "poll", "fs"] }

# Throbber/spinner widget
throbber-widgets-tui = "0.11"

# Fuzzy matching for the quick-select palette
fuzzy-matcher = "0.3"
rayon = "1.12.0"
# default features include `chafa-dyn`, which needs the chafa C lib via
# pkg-config; we only need the built-in protocols + crossterm integration.
ratatui-image = { version = "11.0.4", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
image = "0.25"

# Conversation mode (TTS + STT): HTTP client for the OpenAI-compatible TTS/STT
# endpoints (rustls to avoid an OpenSSL C dependency, consistent with the
# pure-Rust lean; `multipart` for the STT audio upload), in-process audio
# playback (rodio) and microphone capture (cpal). Both rodio's backend and cpal
# link ALSA on Linux — the build host needs alsa-lib (see flake.nix /
# CONTRIBUTING). `cpal` is pinned to the version rodio already resolves so ALSA
# isn't linked twice; `hound` encodes captured PCM to WAV for upload.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3"] }
cpal = "0.15"
hound = "3.5"

# Embedded web UI (optional server, controlled via config). axum provides the
# HTTP + WebSocket stack on the existing tokio runtime; rust-embed bakes the
# static frontend (xterm.js + vanilla JS) into the binary; base64 decodes the
# HTTP Basic-auth header; mime_guess types embedded assets. TLS / mutual-TLS is
# served via rustls + tokio-rustls + hyper-util — all pinned to the pure-Rust
# `ring` provider (NOT aws-lc-rs) to keep the no-C-toolchain build, consistent
# with the rest of the crate; rustls-pemfile/-pki-types load the PEM cert files.
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
rust-embed = "8"
base64 = "0.22"
mime_guess = "2"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "logging",
    "tls12",
] }
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "server-auto",
    "http1",
    "http2",
] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }

[dev-dependencies]
# Property-based testing
proptest = "1.4"
# Async test utilities
tokio-test = "0.4"
# Temp directories for integration tests
tempfile = "3.10"
# Test assertions
pretty_assertions = "1.4"
# Snapshot testing
insta = "1.41"
# `tower` (with `util`) is a normal dependency now (TLS serve loop); the router
# tests reuse it for `ServiceExt::oneshot`. `http-body-util` collects bodies.
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "claude-commander"
path = "src/main.rs"
