[workspace]
resolver = "2"
members = ["crates/*"]
# The Flutter client's Rust cdylib lives at `client/rust/` and is built by
# cargokit/flutter_rust_bridge with its own lockfile + mobile cross-compile
# targets. Exclude it from the core workspace so `cargo build` for the
# TUI/CLI/server never pulls in its (reqwest/tungstenite/android) dep tree.
exclude = ["client"]
# Plain `cargo build`/`cargo test` build only the core lib + TUI/CLI binary plus
# the remote client (a thin reqwest layer core already links), so TUI-only users
# never compile the server crate's web stack (axum/tower/hyper).
default-members = [
    "crates/claude-commander-core",
    "crates/claude-commander",
    "crates/claude-commander-remote",
]

[workspace.package]
version = "0.24.0"
edition = "2024"
authors = ["Claude Commander Contributors"]
license = "MIT"
repository = "https://github.com/claude-commander/claude-commander"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
