[package]
name = "rust_lib_claude_commander_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# `chrono`/`uuid` features enable frb's built-in codecs for the DateTime/Uuid
# fields carried by the mirrored protocol DTOs.
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono", "uuid"] }
# Shared wire contract with the server — the client core deserializes server
# responses into these exact types, so drift fails loudly in Rust. The mirrors
# in `api::mirrors` re-export these for flutter_rust_bridge.
claude-commander-protocol = { path = "../../crates/claude-commander-protocol" }
# Same major versions as the protocol crate so the `Uuid`/`DateTime` in the
# mirrors are the *same* types cargo resolves for the protocol DTOs.
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# HTTP client. rustls (not OpenSSL) keeps Android/iOS cross-compiles painless.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde_json = "1"
anyhow = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
