[package]
name = "rust_lib_claude_commander_client"
version = "0.1.0"
edition = "2021"

# `rlib` is added so the crate's own integration tests (client/rust/tests) can
# link against it as a normal Rust library; `cdylib`/`staticlib` are what
# cargokit/flutter_rust_bridge link into the Flutter app. The extra rlib is inert
# for the mobile build.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# `chrono`/`uuid` features enable frb's built-in codecs for the DateTime/Uuid
# fields carried by the mirrored protocol DTOs.
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono", "uuid"] }
# Shared wire contract with the server — the client core deserializes server
# responses into these exact types, so drift fails loudly in Rust. The mirrors
# in `api::mirrors` re-export these for flutter_rust_bridge.
claude-commander-protocol = { path = "../../crates/claude-commander-protocol" }
# The pure HTTP + WebSocket transport (RemoteClient + Poller + attach). The
# cdylib now drives this instead of hand-rolling reqwest/tungstenite, so the
# whole server surface reaches Dart through one wrapped, opaque per-server handle.
claude-commander-client = { path = "../../crates/claude-commander-client" }
# Same major versions as the protocol crate so the `Uuid`/`DateTime` in the
# mirrors are the *same* types cargo resolves for the protocol DTOs.
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1"
# Drives the RemoteClient's async calls from the synchronous frb worker threads
# (a process-wide multi-thread runtime), plus the attach pump + poller tasks. The
# reqwest/tungstenite/futures-util transport deps moved to claude-commander-client.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }

[dev-dependencies]
# Host-only: the shared hermetic-server + git/tmux harness, plus core for session
# setup/worktree lookup/cleanup. The cdylib is `exclude`d from the root workspace
# (see root Cargo.toml), so these never enter the Android/iOS cross-build — they
# compile only for `cargo test` on the host.
claude-commander-test-support = { path = "../../crates/claude-commander-test-support" }
# `default-features = false` drops core's `audio` feature (ALSA + libpipewire via
# cpal): the client does on-device capture/playback itself, so the host test
# harness never needs a server-side audio backend. Without this, the direct edge
# re-enables `audio` and drags alsa-sys/pipewire-sys into the cdylib build.
claude-commander-core = { path = "../../crates/claude-commander-core", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.27"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
