[package]
name = "claude-commander-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure HTTP + WebSocket transport for claude-commander-server, independent of core"
publish = false

# Only the `claude-commander` bin crate drives the release (single shared tag).
[package.metadata.release]
release = false

[lib]
name = "claude_commander_client"
path = "src/lib.rs"

[dependencies]
# The wire DTOs + control frames. This is the ONLY claude-commander dependency:
# the crate deliberately does NOT depend on `claude-commander-core` so it can
# cross-compile to mobile targets (no gix/ratatui/tmux).
claude-commander-protocol = { path = "../claude-commander-protocol" }

# Async runtime.
tokio = { workspace = true }

# HTTP client. rustls (not OpenSSL) to keep it pure-Rust and mobile-friendly.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }

# WebSocket client for the interactive attach transport. Same pin/features as the
# Flutter client's cdylib so both speak the wire protocol over one locked version.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Error enum.
thiserror = { workspace = true }

# Serialization (request bodies + response decode).
serde = { workspace = true }
serde_json = { workspace = true }

# Observability. The bearer token is NEVER logged.
tracing = { workspace = true }

# Content-hash the polled snapshots to detect change without diffing.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Ids returned by the create endpoints.
uuid = { version = "1.23", features = ["v4", "serde"] }
