[package]
name = "claude-commander-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for managing Claude coding sessions via tmux and git worktrees"
keywords = ["claude", "ai", "terminal", "tui", "tmux"]
categories = ["command-line-utilities", "development-tools"]

# Only the `claude-commander` bin crate drives the release (single shared tag).
# Without this, cargo-release would try to create the same `vX.Y.Z` tag once per
# member and the second attempt fails.
[package.metadata.release]
release = false

[lib]
name = "claude_commander_core"
path = "src/lib.rs"

[dependencies]
# Shared wire types (DTOs + WS protocol) — also consumed by the server and the
# mobile/desktop clients, so the serde shape has a single source of truth.
claude-commander-protocol = { path = "../claude-commander-protocol" }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# CLI (derive macros - idiomatic Rust)
clap = { version = "4.6", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ansi-to-tui = "8"
# Text-input buffer (cursor/editing) for the review comment box.
tui-input = "0.15"

# Git (pure Rust)
gix = { version = "0.85", default-features = false, features = [
    "sha1",
    "worktree-mutation",
    "revision",
    "status",
    "dirwalk",
    "index",
] }

# Configuration (layered: env -> file -> CLI)
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"
toml_edit = "0.25"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"
color-eyre = "0.6"

# Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting for the review diff view (fancy-regex backend — pure
# Rust, no C/oniguruma dependency). `two-face` supplies an extended syntax set
# (the bat language set, incl. TypeScript/TSX/TOML/…) that syntect's bundled
# defaults lack.
syntect = { version = "5.3", default-features = false, features = [
    "default-fancy",
] }
two-face = { version = "0.5", default-features = false, features = [
    "syntect-fancy",
] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
directories = "6.0"
# URL parsing for validating configured remote-server base URLs at load time,
# so a malformed `[[remote_servers]]` url is rejected with a clear error rather
# than surfacing only when the backend is constructed.
url = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1.12"

# Async utilities
async-trait = "0.1"

# PTY for terminal attachment
pty-process = { version = "0.5", features = ["async"] }

# Unix system calls (safe wrappers)
nix = { version = "0.31", features = ["term", "poll", "fs", "user"] }

# Throbber/spinner widget
throbber-widgets-tui = "0.11"

# Fuzzy matching for the quick-select palette
fuzzy-matcher = "0.3"
rayon = "1.12.0"
# default features include `chafa-dyn`, which needs the chafa C lib via
# pkg-config; we only need the built-in protocols + crossterm integration.
ratatui-image = { version = "11.0.6", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
image = "0.25"

# Conversation mode (TTS + STT): HTTP client for the OpenAI-compatible TTS/STT
# endpoints (rustls to avoid an OpenSSL C dependency, consistent with the
# pure-Rust lean; `multipart` for the STT audio upload).
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "rustls",
] }
# In-process audio playback (rodio) and microphone capture (cpal), gated behind
# the `audio` feature. cpal's `pipewire` feature selects PipeWire as the default
# host at runtime (falling back to ALSA if PipeWire isn't running), so on Linux
# these builds link both libpipewire and ALSA. Only builds that actually do
# device I/O (the TUI binary) pull them — the headless server and the Flutter
# client's cdylib build with `audio` off and never link either. `hound` encodes
# captured PCM to WAV for upload.
#
# rodio is pinned to a git rev rather than the 0.22.x release: the last release
# still depends on cpal 0.17, which has no PipeWire host, so a released rodio +
# our cpal 0.18 would resolve to *two* cpal versions and leave playback on ALSA.
# rodio master moved to cpal 0.18 and forwards `pipewire = ["cpal/pipewire"]`, so
# both playback (rodio) and capture (our direct cpal) unify onto a single
# PipeWire-backed cpal 0.18. Bump this rev when a rodio release ships cpal 0.18.
rodio = { git = "https://github.com/RustAudio/rodio", rev = "ee3c21f2f3d926110706a2780658d098831c1ed9", default-features = false, features = [
    "playback",
    "pipewire",
    "wav",
    "mp3",
], optional = true }
cpal = { version = "0.18", optional = true, features = ["pipewire"] }
hound = { version = "3.5", optional = true }
# Local OS-clipboard access, gated behind the `clipboard` feature. arboard links
# X11/Wayland (xcb) on Linux, so — like `audio` — only the desktop TUI needs it;
# the server, remote backend, test-support and client cdylib take core with
# `default-features = false` to drop it.
arboard = { version = "3.6", optional = true }

[features]
# On by default so `cargo build`, the TUI binary, and `cargo test` all get voice
# device I/O and local clipboard access. Downstream crates that never touch a
# mic/speaker or clipboard (the server, test-support, the client cdylib) depend
# on core with `default-features = false` to drop the ALSA-linked
# rodio/cpal/hound and the X11/Wayland-linked arboard entirely.
default = ["audio", "clipboard"]
audio = ["dep:rodio", "dep:cpal", "dep:hound"]
clipboard = ["dep:arboard"]

[dev-dependencies]
# Property-based testing
proptest = "1.11"
# Async test utilities
tokio-test = "0.4"
# Temp directories for integration tests
tempfile = "3.27"
# Test assertions
pretty_assertions = "1.4"
# Snapshot testing
insta = "1.48"
# Set file mtimes deterministically (paste-image prune test)
filetime = "0.2"
