[package]
name = "claude-commander-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin adapter exposing claude-commander-client's transport as a core CommanderBackend"
publish = false

# Only the `claude-commander` bin crate drives the release (single shared tag).
[package.metadata.release]
release = false

[lib]
name = "claude_commander_remote"
path = "src/lib.rs"

[dependencies]
# The `CommanderBackend` trait, `BackendError`, and the DTOs the trait speaks in
# live in core. Drop the default `audio` feature: this crate is a network client
# and never touches a mic/speaker, so it must not drag in ALSA-linked rodio/cpal.
claude-commander-core = { path = "../claude-commander-core", default-features = false }
# The pure HTTP + WebSocket transport this crate adapts. Owns the reqwest/
# tungstenite/xxhash machinery (moved out of here) so it can be shared with the
# mobile cdylib without pulling in core.
claude-commander-client = { path = "../claude-commander-client" }
# The wire DTOs (also re-exported through core, but depended on directly for the
# WS `AttachKind` mapped in the attach adapter).
claude-commander-protocol = { path = "../claude-commander-protocol" }

# Async runtime + trait objects (the `CommanderBackend`/`AttachTerminator` impls).
tokio = { workspace = true }
async-trait = "0.1"

# Ids returned by the create-comment endpoint / used in trait signatures. The
# reqwest/tungstenite/xxhash/serde transport deps moved to claude-commander-client.
uuid = { version = "1.23", features = ["v4", "serde"] }

[dev-dependencies]
# Spin the REAL server router in-process for the round-trip tests.
claude-commander-server = { path = "../claude-commander-server" }
# Shared hermetic-server harness (telemetry off, tmux isolated, loopback bind).
claude-commander-test-support = { path = "../claude-commander-test-support" }
tempfile = "3.27"
