[package]
name = "claude-commander-test-support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared integration-test harness (hermetic server + git/tmux fixtures) for claude-commander"
publish = false

# Test scaffolding only — never part of a release (like the server crate).
[package.metadata.release]
release = false

[dependencies]
# Boots a headless server for tests — no host audio — so match the server and
# build core without its ALSA-linked `audio` feature. Without this, the client
# cdylib's dev-dep on test-support would drag ALSA into the client build.
claude-commander-core = { path = "../claude-commander-core", default-features = false }
claude-commander-server = { path = "../claude-commander-server" }

tokio = { workspace = true }
tempfile = "3.10"
# `spawn_server` calls `axum::serve`; keep the same major as the server crate.
axum = { version = "0.8", features = ["ws", "macros"] }
